deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: zvarner
  name: zvarner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zvarner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zvarner
    spec:
      containers:
      - name:  zvarner
        image: gcr.io/halyard-269216/go-docker
        ports:
        - containerPort: 8080
