service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: zvarner
  name: zvarner
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: zvarner
