ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zvarner-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: zvarner.k8s.halyard.app
    http:
      paths:
      - backend:
          serviceName: zvarner
          servicePort: https
  tls:
  - hosts:
    - zvarner.k8s.halyard.app
    secretName: zvarner
